# ChangeLog for www-apps/mediawiki
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.235 2013/05/30 00:27:43 radhermit Exp $

*mediawiki-1.21.0 (30 May 2013)

  30 May 2013; Tim Harder <radhermit@gentoo.org> +mediawiki-1.21.0.ebuild:
  Version bump.

  25 May 2013; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.7.ebuild,
  mediawiki-1.20.6.ebuild:
  Stable for ppc, wrt bug #471140

  25 May 2013; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.7.ebuild,
  mediawiki-1.20.6.ebuild:
  Stable for x86, wrt bug #471140

  25 May 2013; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.7.ebuild,
  mediawiki-1.20.6.ebuild:
  Stable for amd64, wrt bug #471140

*mediawiki-1.20.6 (25 May 2013)
*mediawiki-1.19.7 (25 May 2013)

  25 May 2013; Tim Harder <radhermit@gentoo.org> +mediawiki-1.19.7.ebuild,
  +mediawiki-1.20.6.ebuild:
  Security bumps (bug #471140).

  16 May 2013; Tim Harder <radhermit@gentoo.org> mediawiki-1.19.6.ebuild,
  mediawiki-1.20.5.ebuild:
  Simplify check for previous installs.

  16 May 2013; Tim Harder <radhermit@gentoo.org> -mediawiki-1.19.5.ebuild,
  -mediawiki-1.20.4.ebuild:
  Remove old.

  03 May 2013; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.6.ebuild,
  mediawiki-1.20.5.ebuild:
  Stable for ppc, wrt bug #468110

  02 May 2013; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.6.ebuild,
  mediawiki-1.20.5.ebuild:
  Stable for x86, wrt bug #468110

  02 May 2013; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.6.ebuild,
  mediawiki-1.20.5.ebuild:
  Stable for amd64, wrt bug #468110

*mediawiki-1.20.5 (01 May 2013)
*mediawiki-1.19.6 (01 May 2013)

  01 May 2013; Tim Harder <radhermit@gentoo.org> +mediawiki-1.19.6.ebuild,
  +mediawiki-1.20.5.ebuild:
  Security bumps (bug #468110).

  17 Apr 2013; Agostino Sarubbo <ago@gentoo.org> -mediawiki-1.19.4.ebuild,
  -mediawiki-1.20.3.ebuild:
  Remove old
